tests/conformance/negative/bad_index_type.afr
create n = 3
create v = n at 0
say v
